--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Охотники за привидениями: Наследники</title>
-        <link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap" 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap" 
         rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/jquery.fancybox.min.css">
